Add links to Font Awesome kit

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
 
     <!-- Custom JS-->
     <script src="assets/js/script.js"></script>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/9dc22cb057.js" crossorigin="anonymous"></script>
 </body>
 </html>
