Changes made, new pull request needed.

--- a/index.html
+++ b/index.html
@@ -19,14 +19,27 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center mt-5">
-                <h1 class="display-1">Quiz Master</h1>
-                <p>Challenge your Mind</p>
-                <p>One step at a time!</p>
+                <h1>
+                    Quiz Master
+                </h1>
+                <p>
+                    Challenge your Mind
+                </p>
+                <p>
+                    One step at a time!
+                </p>
                 <!-- Start Button -->
-                <button>Start</button>
+                <button>
+                    <a href="selection.html">
+                        Start
+                    </a>
+                </button>
                 <!-- How to Play button -->
-                <button>How to Play</button>
-
+                <button>
+                    <a href="howtoplay.html">
+                        How to Play
+                    </a>
+                </button>
             </div>
         </div>
     </div>
