Selection page filled

--- a/selection.html
+++ b/selection.html
@@ -6,34 +6,125 @@
     <ul class="dropdown-menu">
         <li>
             <a class="dropdown-item" href="#">
-                Select Number of Questions
+                5
             </a>
         </li>
         <li>
             <a class="dropdown-item" href="#">
-                Select Category of Questions
+                10
             </a>
         </li>
         <li>
             <a class="dropdown-item" href="#">
-                Select Difficulty Level of Questions
+                15
             </a>
         </li>
         <li>
             <a class="dropdown-item" href="#">
-                Select Timer for Questions
+                20
             </a>
         </li>
     </ul>
     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         Select Category of Questions
     </button>
+    <ul class="dropdown-menu">
+        <li>
+            <a class="dropdown-item" href="#">
+                General Knowledge
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                Science
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                History
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                Geography
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                Sports
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                Music
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                Movies
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                Computer Science
+            </a>
+        </li>
+    </ul>
     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         Select Difficulty Level of Questions
     </button>
+    <ul class="dropdown-menu">
+        <li>
+            <a class="dropdown-item" href="#">
+                Beginner
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                Intermediate
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                Advanced
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                Expert
+            </a>
+        </li>
+    </ul>
     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         Select Timer for Questions
     </button>
+    <ul class="dropdown-menu">
+        <li>
+            <a class="dropdown-item" href="#">
+                1 minute
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                2 minute
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                3 minutes
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                4 minutes
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                5 minutes
+            </a>
+        </li>
+    </ul>
     <button>
         Start
     </button>
