--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- Title and intro -->
-    <div class="container">
+    <div class="container" id="start-screen-container">
         <div class="row">
             <div class="col-12 text-center mt-5">
                 <h1>
@@ -43,6 +43,45 @@
             </div>
         </div>
     </div>
+
+    <div class="container-fluid section" id="quiz-question-container">
+        <div class="row">
+            <div class="col-12">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <div class="d-flex justify-content-start">
+                            <h4>QuizMaster</h4>
+                        </div>
+                        <div>
+                            <h3 id="progress-tracker">Question 1/10</h3>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <div id="timer"></div>
+                        </div>
+                        <div>
+                            <h2 class="card-title" id="question">What are the main colours on the flag of Spain?</h2>
+                        </div>
+                        <div id="button-container">
+                            <button class="btn" id="answer-a">Black and Yellow</button>
+                            <button class="btn" id="answer-b">Blue and White</button>
+                            <button class="btn" id="answer-c">Green and White</button>
+                            <button class="btn" id="answer-d">Red and Yellow</button>
+                        </div>
+                        <div>
+                            <button class="btn float-end" id="next-button">Next</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
