Add html for results screen

--- a/index.html
+++ b/index.html
@@ -76,6 +76,28 @@
         </div>
     </div>
 
+    <!-- Results Screen-->
+    <div class="container-fluid section" id="results-container">
+        <div class="row">
+            <div class="col-12">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <div class="d-flex justify-content-start">
+                            <h4>QuizMaster</h4>
+                        </div>
+                        <div>
+                            <h2 class="card-title">You scored <strong id="score">8</strong> out of <strong id="total-questions">10</strong></h2>
+                            <h3 class="card-title">Great Job! You answered <strong id="score-percentage">80</strong><strong>%</strong> of the questions correctly.</h3>
+                        </div>
+                        <div>
+                            <button class="btn" id="play-again-button">Play Again</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
