Edit styling for start screen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!-- Title and intro -->
+    <!-- Start Screen -->
     <div class="container-fluid section" id="start-screen-container">
         <div class="row">
             <div class="col-12">
@@ -23,7 +23,7 @@
                     <div class="card-body">
                         <div>
                             <h1>QuizMaster</h1>
-                            <h3>Challenge your Mind, One step at a time!</h3>
+                            <h3>Challenge Your Mind, One Question at a Time!</h3>
                         </div>
                         <div>
                             <button class="btn" id="start-button">Start</button>
@@ -91,13 +91,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
