--- a/index.html
+++ b/index.html
@@ -25,9 +25,54 @@
                             <h1>QuizMaster</h1>
                             <h3>Challenge Your Mind, One Question at a Time!</h3>
                         </div>
-                        <div>
+                        <div class="d-flex justify-content-center column-gap-3">
                             <button class="btn" id="start-button">Start</button>
                             <button class="btn" id="how-to-play-button">How to Play</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Quiz Parameters Screen-->
+    <div class="container-fluid section" id="quiz-parameters-container">
+        <div class="row">
+            <div class="col-12">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <div>
+                            <h2>QuizMaster</h2>
+                            <h3>Customise your quiz using the dropdown menus</h3>
+                        </div>
+                        <select class="form-select" aria-label="select number of questions">
+                            <option selected>Select Number of Questions</option>
+                            <option value="1">5</option>
+                            <option value="2">10</option>
+                            <option value="3">15</option>
+                            <option value="4">20</option>
+                        </select>
+                        <select class="form-select" aria-label="select category of questions">
+                            <option selected>Select Category of Questions</option>
+                            <option value="1">5</option>
+                            <option value="2">10</option>
+                            <option value="3">15</option>
+                            <option value="4">20</option>
+                        </select>
+                        <select class="form-select" aria-label="select difficulty of questions">
+                            <option selected>Select Difficulty Level of Questions</option>
+                            <option value="1">Easy</option>
+                            <option value="2">Medium</option>
+                            <option value="3">Hard</option>
+                        </select>
+                        <select class="form-select" aria-label="select timer for each question">
+                            <option selected>Select Timer for Each Question</option>
+                            <option value="1">10s</option>
+                            <option value="2">15s</option>
+                            <option value="3">20s</option>
+                        </select>
+                        <div>
+                            <button class="btn" id="parameter-start-button">Start</button>
                         </div>
                     </div>
                 </div>
