simplify the css styling by grouping same styles

--- a/index.html
+++ b/index.html
@@ -46,27 +46,35 @@
                             <h3>Customise your quiz using the dropdown menus</h3>
                         </div>
                         <select class="form-select" aria-label="select number of questions">
-                            <option selected>Select Number of Questions</option>
+                            <option selected>Select Number</option>
                             <option value="1">5</option>
                             <option value="2">10</option>
                             <option value="3">15</option>
                             <option value="4">20</option>
                         </select>
                         <select class="form-select" aria-label="select category of questions">
-                            <option selected>Select Category of Questions</option>
-                            <option value="1">5</option>
-                            <option value="2">10</option>
-                            <option value="3">15</option>
-                            <option value="4">20</option>
+                            <option selected>Select Category</option>
+                            <option value="1">General Knowledge</option>
+                            <option value="2">Entertainment: Books</option>
+                            <option value="3">Entertainment: Film</option>
+                            <option value="4">Entertainment: Music</option>
+                            <option value="5">Entertainment: Television</option>
+                            <option value="6">Sports</option>
+                            <option value="7">Geography</option>
+                            <option value="8">History</option>
+                            <option value="9">Celebrity</option>
+                            <option value="10">Animals</option>
+                            <option value="11">Politics</option>
+                            <option value="12">Art</option>
                         </select>
                         <select class="form-select" aria-label="select difficulty of questions">
-                            <option selected>Select Difficulty Level of Questions</option>
+                            <option selected>Select Difficulty Level</option>
                             <option value="1">Easy</option>
                             <option value="2">Medium</option>
                             <option value="3">Hard</option>
                         </select>
                         <select class="form-select" aria-label="select timer for each question">
-                            <option selected>Select Timer for Each Question</option>
+                            <option selected>Select Timer</option>
                             <option value="1">10s</option>
                             <option value="2">15s</option>
                             <option value="3">20s</option>
