--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Master</title>
+    <title>QuizMaster</title>
 
     <!-- Bootstap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -94,44 +94,45 @@
                             <h2 class="mb-3"><i class="fa-solid fa-crown"></i>QuizMaster</h2>
                             <h3 class="mb-3">Customise your quiz using the dropdown menus</h3>
                         </div>
-                        <select class="form-select" aria-label="select number of questions">
+                        <select class="form-select" id="number-of-questions" aria-label="select number of questions">
                             <option selected>Select Number</option>
-                            <option value="1">5</option>
-                            <option value="2">10</option>
-                            <option value="3">15</option>
-                            <option value="4">20</option>
+                            <option value="5">5</option>
+                            <option value="10">10</option>
+                            <option value="15">15</option>
+                            <option value="20">20</option>
                         </select>
-                        <select class="form-select" aria-label="select category of questions">
+                        <select class="form-select" id="category-of-questions" aria-label="select category of questions">
                             <option selected>Select Category</option>
-                            <option value="1">General Knowledge</option>
-                            <option value="2">Entertainment: Books</option>
-                            <option value="3">Entertainment: Film</option>
-                            <option value="4">Entertainment: Music</option>
-                            <option value="5">Entertainment: Television</option>
-                            <option value="6">Sports</option>
-                            <option value="7">Geography</option>
-                            <option value="8">History</option>
-                            <option value="9">Celebrity</option>
-                            <option value="10">Animals</option>
-                            <option value="11">Politics</option>
-                            <option value="12">Art</option>
+                            <option value="9">General Knowledge</option>
+                            <option value="10">Books</option>
+                            <option value="11">Film</option>
+                            <option value="12">Music</option>
+                            <option value="14">Television</option>
+                            <option value="21">Sports</option>
+                            <option value="22">Geography</option>
+                            <option value="23">History</option>
+                            <option value="26">Celebrities</option>
+                            <option value="27">Animals</option>
+                            <option value="24">Politics</option>
+                            <option value="25">Art</option>
                         </select>
-                        <select class="form-select" aria-label="select difficulty of questions">
+                        <select class="form-select" id="difficulty-of-questions" aria-label="select difficulty of questions">
                             <option selected>Select Difficulty</option>
-                            <option value="1">Easy</option>
-                            <option value="2">Medium</option>
-                            <option value="3">Hard</option>
+                            <option value="easy">Easy</option>
+                            <option value="medium">Medium</option>
+                            <option value="hard">Hard</option>
                         </select>
-                        <select class="form-select" aria-label="select timer for each question">
+                        <select class="form-select" id="timer-for-questions" aria-label="select timer for each question">
                             <option selected>Select Timer</option>
-                            <option value="1">10s</option>
-                            <option value="2">15s</option>
-                            <option value="3">20s</option>
-                            <option value="3">30s</option>
+                            <option value="10">10s</option>
+                            <option value="15">15s</option>
+                            <option value="20">20s</option>
+                            <option value="30">30s</option>
                         </select>
                         <div>
-                            <button class="btn mt-3" id="parameter-start-button"><i
+                            <button class="btn mt-4 mb-3" id="parameter-start-button"><i
                                     class="fa-solid fa-play"></i>Start</button>
+                            <p id="error"></p>
                         </div>
                     </div>
                 </div>
@@ -146,7 +147,7 @@
                 <div class="card text-center">
                     <div class="card-body">
                         <div class="d-flex justify-content-between mb-2">
-                            <i class="fa-solid fa-house"></i>
+                            <i id="home-button" class="fa-solid fa-house"></i>
                             <h4><i class="fa-solid fa-crown"></i>QuizMaster</h4>
                         </div>
                         <div class="mb-1">
@@ -158,13 +159,13 @@
                             </div>
                         </div>
                         <div class="mb-3">
-                            <h2 class="card-title" id="question">What are the main colours on the flag of Spain?</h2>
+                            <h2 class="card-title" id="question"></h2>
                         </div>
                         <div id="button-container" class="mb-4">
-                            <button class="btn" id="answer-a">Black and Yellow</button>
-                            <button class="btn" id="answer-b">Blue and White</button>
-                            <button class="btn" id="answer-c">Green and White</button>
-                            <button class="btn" id="answer-d">Red and Yellow</button>
+                            <button class="btn"></button>
+                            <button class="btn"></button>
+                            <button class="btn"></button>
+                            <button class="btn"></button>
                         </div>
                         <div>
                             <button class="btn float-end" id="next-button"><i
