update readme with technologies used and additional features implemented

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="QuizMaster is an interactive and customizable quiz platform that offers users a fun and educational experience. Tailor your quiz by selecting categories, difficulty levels, time limits, and more. Test your knowledge, track your progress, and receive instant feedback in a seamless, mobile-friendly interface. Perfect for trivia enthusiasts and learners of all ages.">
     <title>QuizMaster</title>
 
     <!-- Bootstap 5 CSS -->
@@ -145,7 +147,7 @@
                             </div>
                         </div>
                         <div class="mb-3">
-                            <h2 class="card-title" id="question"></h2>
+                            <h2 class="card-title" id="question">A</h2>
                         </div>
                         <div id="button-container" class="mb-4">
                             <button class="btn"></button>
@@ -189,7 +191,7 @@
     </div>
 
     <!-- Toast to display errors-->
-    <div class="toast-container position-fixed top-0 start-50 translate-middle-x p-3">
+    <div class="toast-container position-fixed top-0 end-0 p-3">
         <div id="errorToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
                 <strong class="me-auto"><i class="fa-solid fa-crown"></i>QuizMaster</strong>
