adjust responsivity on smaller screens by reducing font-size

--- a/index.html
+++ b/index.html
@@ -94,14 +94,26 @@
                             <option value="10">Books</option>
                             <option value="11">Film</option>
                             <option value="12">Music</option>
+                            <option value="13">Musicals and Theatres</option>
                             <option value="14">Television</option>
+                            <option value="15">Video Games</option>
+                            <option value="16">Board Games</option>
+                            <option value="17">Science and Nature</option>
+                            <option value="18">Computer</option>
+                            <option value="19">Mathematics</option>
+                            <option value="20">Mythology</option>
                             <option value="21">Sports</option>
                             <option value="22">Geography</option>
                             <option value="23">History</option>
-                            <option value="26">Celebrities</option>
-                            <option value="27">Animals</option>
                             <option value="24">Politics</option>
                             <option value="25">Art</option>
+                            <option value="26">Celebrities</option>
+                            <option value="27">Animals</option>
+                            <option value="28">Vehicles</option>
+                            <option value="29">Comics</option>
+                            <option value="30">Gadgets</option>
+                            <option value="31">Japanese Amime &amp; Manga</option>
+                            <option value="32">Cartoon &amp; Animations</option>
                         </select>
                         <select class="form-select" id="difficulty-of-questions"
                             aria-label="select difficulty of questions">
@@ -209,7 +221,7 @@
     </script>
 
     <!-- Custom JS-->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/check.js"></script>
 
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/9dc22cb057.js" crossorigin="anonymous"></script>
