add quick play mode, make buttons responsive, add sound effects

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                             <h1 class="mb-3"><i class="fa-solid fa-crown"></i>QuizMaster</h1>
                             <h2 class="mb-3">Challenge Your Mind, One Question at a Time!</h2>
                         </div>
-                        <div class="d-flex justify-content-center column-gap-3">
+                        <div class="d-flex justify-content-center column-gap-2 row-gap-2 button-container">
                             <button class="btn" id="start-button"><i class="fa-solid fa-play"></i>Start</button>
+                            <button class="btn" id="quick-play-button"><i class="fa-solid fa-forward"></i>Quick Play</button>
                             <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#howToPlayModal"
                                 id="how-to-play-button"><i class="fa-solid fa-circle-info"></i>How to Play</button>
                         </div>
@@ -226,6 +227,7 @@
 
     <!-- Custom JS-->
     <script src="assets/js/check.js"></script>
+    <script src="assets/js/quickplay.js"></script>
 
     <!-- Confetti -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
