--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="card-body">
                         <div>
                             <h1 class="mb-3"><i class="fa-solid fa-crown"></i>QuizMaster</h1>
-                            <h2 class="mb-3">Challenge Your Mind, One Question at a Time!</h2>
+                            <h2 class="mb-4">Challenge Your Mind, One Question at a Time!</h2>
                         </div>
                         <div class="d-flex justify-content-center column-gap-2 row-gap-2 button-container">
                             <button class="btn" id="start-button"><i class="fa-solid fa-play"></i>Start</button>
@@ -235,7 +235,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>    
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -243,7 +243,7 @@
     </script>
 
     <!-- Custom JS-->
-    <script src="assets/js/check.js"></script>
+    <script src="assets/js/script.js"></script>
     <script src="assets/js/quickplay.js"></script>
 
     <!-- Confetti -->
